--- a/package.json
+++ b/package.json
@@ -8,38 +8,33 @@
     "start": "npm run build && node src/server/index.js",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --port 3000",
     "server": "nodemon src/server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "concurrently \"nodemon %NODE_DEBUG_OPTION% src/server/index.js\" \"npm run client\"",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Vitalijs Komarovs",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^16.8.14",
     "axios": "^0.18.0",
-    "jquery": "^3.3.1",
     "babel-polyfill": "^6.26.0",
+    "css-element-queries": "^1.1.1",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "mongodb": "^3.1.13",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.1.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
     "eslint": "^5.0.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^3.0.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
