--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.8.14",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "css-element-queries": "^1.1.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
@@ -23,8 +24,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "react-scripts": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -37,7 +37,6 @@
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
-    "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
